@@ -1,4 +1,14 @@
 
+Saturday Janary 2nd, 2016
+=========================
+
+    Sketched out required packets for chunk slice sender/receiver
+
+    Sketch out chunk sender
+
+    Sketch out receiver struct
+
+
 Friday December 25th, 2015
 ==========================
 
